syntax = "proto3";

option go_package="./;pb";

package pb;

service HeartbeatManager {
  rpc Heartbeat(HeartbeatRequest) returns (HeartbeatResponse) {}
}

message HeartbeatRequest {
  BladeInfo BladeInfo = 1;
  repeated SessionInfo SessionInfos = 2;
}

message SessionInfo {
  string SessionID = 1;
  string UserID = 2;
  uint64 TrafficUsed = 3;
}

message BladeInfo{
  string ID = 1;
  string BootstrapID = 2;
  uint64 TrafficUsed = 3;
}

message HeartbeatResponse {
  string Status = 1;
}